# BLOM

./: .gitignore  .gitmodules  CONTRIBUTING.md  Externals_BLOM.cfg  README.md  changed_files.org  meson.build  meson_options.txt
.github/: CODEOWNERS
BLOM_channel_new01/: limits_BLOM_channel_new01  limits_restart_BLOM_channel_new01  run.sh_normal_betzy  run.sh_normal_betzy_restart
ben02/: icaux_ben02.F  meson.build  mod_ben02.F  mod_ben02.F90  mod_ben02func.F  mod_ben02func.F90  mod_bulktf.F  mod_bulktf.F90  mod_inicon_ben02.F90  mod_sfcstr_ben02.F90  mod_thdysi.F  mod_thdysi.F90  mod_thermf_ben02.F90  sfcstr_ben02.F  thermf_ben02.F
bld/: blom.cpl7.template  blom_dimensions  blom_nreg  meson.build  micom.buildexe.csh  micom_dimensions
bld/MNP2/: patch.input.1  patch.input.19  patch.input.2  patch.input.36  patch.input.4  patch.input.9
bld/channel/: dimensions.F.1.k53y512x208  dimensions.F.128.k53y512x208  dimensions.F.256.k53y512x208  dimensions.F.512.k53y512x208  patch.input.1  patch.input.1024  patch.input.128  patch.input.2048  patch.input.256  patch.input.512
bld/channel_small/: create_patch_input.py  patch.input.16  patch.input.2  patch.input.256  patch.input.32  patch.input.4  patch.input.64  patch.input.8
bld/fuk95/: patch.input.1  patch.input.12  patch.input.2  patch.input.24  patch.input.4  patch.input.48
bld/gx1v5/: patch.input.148  patch.input.200  patch.input.42  patch.input.90  patch.input.96
bld/gx1v6/: patch.input.109  patch.input.118  patch.input.148  patch.input.190  patch.input.20  patch.input.373  patch.input.48  patch.input.55  patch.input.90
bld/gx3v7/: patch.input.16  patch.input.32  patch.input.4
bld/single_column/: patch.input.1
bld/tnx0.125v4/: patch.input.1532  patch.input.1625  patch.input.2867  patch.input.521
bld/tnx0.25v1/: patch.input.221  patch.input.2475  patch.input.2895  patch.input.464
bld/tnx0.25v3/: patch.input.1203  patch.input.1682  patch.input.222  patch.input.2482  patch.input.464  patch.input.787
bld/tnx0.25v4/: patch.input.1197  patch.input.1409  patch.input.1822  patch.input.221  patch.input.464  patch.input.784
bld/tnx0.5v1/: patch.input.1019  patch.input.1131  patch.input.1132  patch.input.123  patch.input.124  patch.input.1269  patch.input.1270  patch.input.1397  patch.input.1398  patch.input.1516  patch.input.1517  patch.input.252  patch.input.253  patch.input.374  patch.input.375  patch.input.380  patch.input.381  patch.input.511  patch.input.512  patch.input.62  patch.input.632  patch.input.634  patch.input.749  patch.input.883  patch.input.887  patch.input.888
bld/tnx1.5v1/: patch.input.63  patch.input.77  patch.input.79
bld/tnx1v1/: patch.input.156  patch.input.186  patch.input.216  patch.input.315  patch.input.42  patch.input.8  patch.input.91
bld/tnx1v3/: patch.input.112  patch.input.123  patch.input.156  patch.input.186  patch.input.245  patch.input.257  patch.input.32  patch.input.356  patch.input.42  patch.input.63  patch.input.77  patch.input.91
bld/tnx1v4/: patch.input.123  patch.input.128  patch.input.156  patch.input.186  patch.input.256  patch.input.32  patch.input.354  patch.input.374  patch.input.42  patch.input.431  patch.input.500  patch.input.623  patch.input.63  patch.input.761  patch.input.77  patch.input.91
bld/tnx2v1/: patch.input.20  patch.input.203  patch.input.22  patch.input.24  patch.input.272  patch.input.39  patch.input.4  patch.input.406  patch.input.42  patch.input.64  patch.input.8  patch.input.96
cesm/: common_cesm.h  data_mct.F  geoenv_cesmextra.F  getfrc_cesm.F  icaux_cesm.F  inifrc_cesm.F  meson.build  mod_cesm.F90  mod_geoenv_cesmextra.F90  mod_mctdata.F90  mod_sfcstr_cesm.F90  mod_thermf_cesm.F90  sfcstr_cesm.F  thermf_cesm.F
channel/: meson.build  mod_channel.F90  mod_thermf_channel.F90  thermf_channel.F
cime_config/: buildcpp  buildcppc  buildlib  buildlib_2.1  buildlib_2.2  buildnml  case_dict.py  config_archive.xml  config_component.xml  config_compsets.xml  config_pes.xml  namelist_definition_blom.xml  ocn_in.readme  ocn_in_paramgen.py  paramgen.py  user_nl_blom  user_nl_blom_outvol_reduced
doc/: conf.py  index.rst
drivers/: meson.build
fuk95/: meson.build  mod_fuk95.F90
hamocc/: .mo_ncout_hamocc.F90.swp  accfields.F90  aufr_bgc.F90  aufw_bgc.F90  beleg_bgc.F90  beleg_parm.F90  beleg_vars.F90  blom2hamocc.F  bodensed.F90  c14_correction.F90  calc_bot.F90  calc_idepth.F90  carchm.F90  carchm_kequi.F90  carchm_solve.F90  carchm_solve_DICsat.F90  co2_ems.F90  common_bgc.h  common_bgcs.h  cyano.F90  dipowa.F90  get_cfc.F90  get_dust.F90  get_pi_ph.F90  hamocc2blom.F  hamocc2micom.F  hamocc4bcm.F90  hamocc_init.F  hamocc_init.F90  hamocc_step.F  hamocc_step.F90  ini_hamocc.F90  inibgc.F  inventory_bgc.F90  meson.build  micom2hamocc.F  mo_Gdata_read.F90  mo_accfields.F90  mo_apply_fedep.F90  mo_apply_ndep.F90  (+85 more)
icedyn/: bcoef.F  drift.F  iadvdf.F  ice2mod.F  iceadv.F  icedif.F  icedyn.F  iniconicedyn.F  iniicedyn.F  intpmi.F  mod2ice.F  plast.F  relcon.F  restart_icerd.F  restart_icewt.F  tavocf.F  weno3pd.F
idlage/: idlage_init.F  idlage_step.F  meson.build  mod_idlage.F90
noforcing/: meson.build  mod_noforcing.F90
phy/: advect.F  barotp.F  bigrid.F  blkdat.F  blom_init.F  blom_step.F  chksum.F  chksummsk.F  chkvar.F  clndr.F  cmnfld.F  cmnfld_bfsqf.F  cmnfld_nslope.F  cntiso_hybrid_forcing.F90  common_blocks.h  common_clndr.h  common_eos.h  common_forc.h  common_geo.h  common_tke.h  convec.F  crc.h  diapfl.F  difest.F  diffus.F  dimensions.F  dimensions.F_old  eddtra.F  eddtra_gm.F  eddtra_intdif.F  eosdat.F  eosfun.F  fill_global.F  forfun_channel.F  fwbbal.F  geoenv_file.F  geoenv_test.F  getfrc.F  getfrc.F90  getlpi.F  (+140 more)
phy_mem/: advect.F  blom_step.F  chksummsk.F  chkvar.F  cmnfld.F  cmnfld_nslope.F  common_blocks.h  common_bud.h  common_forc.h  common_seaice.h  convec.F  diapfl.F  difest.F  eddtra_gm.F  eddtra_intdif.F  eosfun.F  frcdat.F  fwbbal.F  geoenv_channel.F  geoenv_file.F  geoenv_test.F  getfrc.F  hfharm.F  (+27 more)
tests/: .gitignore  meson.build
tests/fuk95/: limits  meson.build  restart
tests/single_column/: meson.build
(+444 files in other folders)
