sources += files('accfields.F90', 'aufr_bgc.F90', 'aufw_bgc.F90',
'beleg_parm.F90', 'beleg_vars.F90', 'bodensed.F90',
'carchm.F90', 'carchm_kequi.F90', 'carchm_solve.F90',
'carchm_solve_DICsat.F90', 'cyano.F90', 'dipowa.F90', 'get_cfc.F90',
'mo_dmsph.F90', 'hamocc4bcm.F90', 'hamocc_init.F', 'hamocc_step.F',
'inventory_bgc.F90', 'mo_bgcmean.F90', 'mo_biomod.F90', 'mo_carbch.F90',
'mo_chemcon.F90', 'mo_clim_swa.F90', 'mo_control_bgc.F90', 'mo_fedep.F90',
'mo_Gdata_read.F90', 'mo_intfcblom.F90', 'mo_ndep.F90', 'mo_param1_bgc.F90',
'mo_riverinpt.F90', 'mo_sedmnt.F90', 'mo_vgrid.F90', 'ncout_hamocc.F',
'netcdf_def_vardb.F90', 'ocprod.F90', 'powach.F90', 'powadi.F90',
'preftrc.F90', 'profile_gd.F90', 'read_netcdf_var.F90', 'restart_hamoccwt.F',
'sedshi.F90', 'trc_limitc.F', 'write_netcdf_var.F90')
