sources += files(
  'accfields.F90',
  'aufr_bgc.F90',
  'aufw_bgc.F90',
  'beleg_parm.F90',
  'beleg_vars.F90',
  'carchm.F90',
  'carchm_kequi.F90',
  'carchm_solve.F90',
  'carchm_solve_DICsat.F90',
  'cyano.F90',
  'dipowa.F90',
  'get_cfc.F90',
  'hamocc4bcm.F90',
  'hamocc_init.F90',
  'hamocc_step.F90',
  'inventory_bgc.F90',
  'mo_Gdata_read.F90',
  'mo_apply_fedep.F90',
  'mo_apply_ndep.F90',
  'mo_apply_rivin.F90',
  'mo_apply_oafx.F90',
  'mo_bgcmean.F90',
  'mo_biomod.F90',
  'mo_carbch.F90',
  'mo_chemcon.F90',
  'mo_clim_swa.F90',
  'mo_control_bgc.F90',
  'mo_intfcblom.F90',
  'mo_param1_bgc.F90',
  'mo_read_fedep.F90',
  'mo_read_ndep.F90',
  'mo_read_pi_ph.F90',
  'mo_read_rivin.F90',
  'mo_read_oafx.F90',
  'mo_read_sedpor.F90',
  'mo_sedmnt.F90',
  'mo_vgrid.F90',
  'ncout_hamocc.F90',
  'netcdf_def_vardb.F90',
  'ocprod.F90',
  'powach.F90',
  'powadi.F90',
  'preftrc.F90',
  'profile_gd.F90',
  'read_netcdf_var.F90',
  'restart_hamoccwt.F90',
  'sedshi.F90',
  'trc_limitc.F90',
  'write_netcdf_var.F90',
  'mo_extNbioproc.F90',
  'mo_extNsediment.F90',
  'mo_m4ago.F90')
