sources += files(
  'mo_accfields.F90',
  'mo_aufr_bgc.F90',
  'mo_aufw_bgc.F90',
  'mo_ini_fields.F90',
  'mo_carchm.F90',
  'mo_cyano.F90',
  'mo_dipowa.F90',
  'mo_get_cfc.F90',
  'mo_hamocc4bcm.F90',
  'mo_hamocc_init.F90',
  'mo_hamocc_step.F90',
  'mo_inventory_bgc.F90',
  'mo_Gdata_read.F90',
  'mo_apply_fedep.F90',
  'mo_apply_ndep.F90',
  'mo_apply_rivin.F90',
  'mo_apply_oafx.F90',
  'mo_bgcmean.F90',
  'mo_biomod.F90',
  'mo_boxatm.F90',
  'mo_carbch.F90',
  'mo_chemcon.F90',
  'mo_clim_swa.F90',
  'mo_control_bgc.F90',
  'mo_intfcblom.F90',
  'mo_param1_bgc.F90',
  'mo_param_bgc.F90',
  'mo_read_fedep.F90',
  'mo_read_ndep.F90',
  'mo_read_pi_ph.F90',
  'mo_read_rivin.F90',
  'mo_read_shelfmask.F90',
  'mo_shelfsea_restime.F90',
  'mo_read_oafx.F90',
  'mo_read_sedpor.F90',
  'mo_read_sedqual.F90',
  'mo_sedmnt.F90',
  'mo_sedmnt_spinoff.F90',
  'mo_vgrid.F90',
  'mo_ncout_hamocc.F90',
  'mo_netcdf_bgcrw.F90',
  'mo_ocprod.F90',
  'mo_powach.F90',
  'mo_powadi.F90',
  'mo_preftrc.F90',
  'mo_profile_gd.F90',
  'mo_restart_hamoccwt.F90',
  'mo_sedshi.F90',
  'mo_trc_limitc.F90',
  'mo_extNwatercol.F90',
  'mo_extNsediment.F90')
