sources += files('cntiso_hybrid_forcing.F90', 'bigrid.F', 'blom_init.F',
'blom_step.F', 'convec.F', 'crc.c', 'diapfl.F', 'difest.F', 'diffus.F',
'fill_global.F', 'geoenv_file.F', 'geoenv_test.F', 'getfrc.F90', 'idarlx.F',
'inifrc.F90', 'inigeo.F', 'iniphy.F', 'inivar.F90', 'intp1d.F', 'mod_advect.F',
'mod_barotp.F', 'mod_budget.F90', 'mod_calendar.F90', 'mod_checksum.F90',
'mod_chkvar.F90', 'mod_cmnfld.F', 'mod_config.F90', 'mod_constants.F90',
'mod_dia.F', 'mod_diffusion.F90', 'mod_eddtra.F', 'mod_eos.F90',
'mod_forcing.F90', 'mod_grid.F90', 'mod_hor3map.F90', 'mod_inicon.F',
'mod_momtum.F', 'mod_mxlayr.F', 'mod_nctools.F', 'mod_niw.F90', 'mod_pbcor.F',
'mod_pgforc.F', 'mod_pointtest.F90', 'mod_remap.F', 'mod_seaice.F90',
'mod_state.F90', 'mod_swabs.F', 'mod_temmin.F', 'mod_tidaldissip.F90',
'mod_time.F90', 'mod_timing.F90', 'mod_tke.F90', 'mod_tmsmt.F', 'mod_types.F90',
'mod_utility.F90', 'mod_vcoord.F90', 'mod_vdiff.F90', 'mod_xc.F',
'numerical_bounds.F90', 'rdcsss.F', 'rdlim.F', 'restart_rd.F', 'restart_wt.F',
'sfcstr.F90', 'thermf.F', 'wdiflx.F', 'wtime.F')
