sources += files(
'crc.c',
'mod_advect.F90',
'mod_ale_forcing.F90',
'mod_ale_regrid_remap.F90',
'mod_ale_vdiff.F90',
'mod_barotp.F90',
'mod_bigrid.F90',
'mod_blom_init.F90',
'mod_blom_step.F90',
'mod_budget.F90',
'mod_calendar.F90',
'mod_checksum.F90',
'mod_chkvar.F90',
'mod_cmnfld.F90',
'mod_cmnfld_routines.F90',
'mod_config.F90',
'mod_constants.F90',
'mod_convec.F90',
'mod_dia.F90',
'mod_diapfl.F90',
'mod_difest.F90',
'mod_diffus.F90',
'mod_diffusion.F90',
'mod_eddtra.F90',
'mod_eos.F90',
'mod_fill_global.F90',
'mod_forcing.F90',
'mod_geoenv.F90',
'mod_getfrc.F90',
'mod_grid.F90',
'mod_hor3map.F90',
'mod_idarlx.F90',
'mod_ifdefs.F90',
'mod_inicon.F90',
'mod_inifrc.F90',
'mod_inigeo.F90',
'mod_iniphy.F90',
'mod_inivar.F90',
'mod_intp1d.F90',
'mod_momtum.F90',
'mod_mxlayr.F90',
'mod_nctools.F90',
'mod_ndiff.F90',
'mod_niw.F90',
'mod_pbcor.F90',
'mod_pgforc.F90',
'mod_pointtest.F90',
'mod_rdcsss.F90',
'mod_rdlim.F90',
'mod_remap.F90',
'mod_restart.F90',
'mod_seaice.F90',
'mod_sfcstr.F90',
'mod_state.F90',
'mod_swabs.F90',
'mod_temmin.F90',
'mod_thermf.F90',
'mod_tidaldissip.F90',
'mod_time.F90',
'mod_timing.F90',
'mod_tke.F90',
'mod_tmsmt.F90',
'mod_types.F90',
'mod_utility.F90',
'mod_vcoord.F90',
'mod_wdiflx.F90',
'mod_wtime.F90',
'mod_xc.F90')
