# Note that these unit tests assumes that the variable 'sources' exist and is
# filled with all the necessary files to build BLOM.
#
# Additionally these tests should be instantiated after all configuration
# options have been applied.
#
# Lastly, note that we use individual folders per test that creates
# 'dimensions.F', this is to avoid name conflict from the automatically
# generated output.

subdir('single_column')
subdir('fuk95')
